--- a/ansible/roles/slave/tasks/dpkg.yml
+++ b/ansible/roles/slave/tasks/dpkg.yml
@@ -1,23 +1,23 @@
 ---
 - name: dpkg | Install template files
-  sudo: yes
-  sudo_user: "{{ buildbot_username }}"
+  become: yes
+  become_user: "{{ buildbot_username }}"
   copy:
     src: dpkg/
     dest: ~/debian/
 
 # For some reason, copy does not copy the file attributes.
 - name: dpkg | Fix file attributes post-copy
-  sudo: yes
-  sudo_user: "{{ buildbot_username }}"
+  become: yes
+  become_user: "{{ buildbot_username }}"
   file:
     path: debian/rules
     mode: 0755
     state: file
 
 - name: dpkg | Create template archive for buildbot
-  sudo: yes
-  sudo_user: "{{ buildbot_username }}"
+  become: yes
+  become_user: "{{ buildbot_username }}"
   shell: "tar czf dolphin-debian.tar.gz debian/"
   args:
     creates: ~/dolphin-debian.tar.gz
