--- a/ansible/roles/slave/tasks/slave_Darwin.yml
+++ b/ansible/roles/slave/tasks/slave_Darwin.yml
@@ -57,19 +57,19 @@
     src: /usr/local/bin/cmake
     dest: /usr/bin/cmake
     state: link
-  sudo: yes
+  become: yes
 
 ##
 ## PIP
 ##
 # sudo to install because on osx this playbook is not run as root
 - name: Install pip
-  sudo: yes
+  become: yes
   easy_install:
     name: pip
 
 - name: Install buildbot slave
-  sudo: yes
+  become: yes
   pip:
     executable: /usr/local/bin/pip
     name: buildbot-slave
@@ -78,7 +78,7 @@
 ## BUILDBOT
 ##
 - name: Install buildslave launch agent
-  sudo: yes
+  become: yes
   template:
     src: net.buildbot.slave.plist.j2
     dest: /Library/LaunchAgents/net.buildbot.slave.plist
