--- a/ansible/roles/slave/tasks/slave_FreeBSD.yml
+++ b/ansible/roles/slave/tasks/slave_FreeBSD.yml
@@ -15,8 +15,8 @@
     key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
 
 - name: Add github to known_hosts
-  sudo: yes
-  sudo_user: "{{ buildbot_username }}"
+  become: yes
+  become_user: "{{ buildbot_username }}"
   lineinfile:
     create: yes
     dest: ~/.ssh/known_hosts
@@ -63,24 +63,24 @@
 # it appears relateive paths including . or ~ are expanded before the sudo
 # command is executed.
 - name: Create build slave
-  sudo: yes
-  sudo_user: "{{ buildbot_username }}"
+  become: yes
+  become_user: "{{ buildbot_username }}"
   shell: "buildslave create-slave /home/{{ buildbot_username }} {{ buildmaster_host }}:{{ buildmaster_port }} {{ slave_username }} {{ slave_password }}"
   args:
     creates: info/admin
   notify: restart freebsd buildbot
 
 - name: Update slave host information
-  sudo: yes
-  sudo_user: "{{ buildbot_username }}"
+  become: yes
+  become_user: "{{ buildbot_username }}"
   template:
     src: buildbot_info_host.j2
     dest: "/home/{{ buildbot_username }}/info/host"
   notify: restart freebsd buildbot
 
 - name: Update slave admin information
-  sudo: yes
-  sudo_user: "{{ buildbot_username }}"
+  become: yes
+  become_user: "{{ buildbot_username }}"
   template:
     src: buildbot_info_admin.j2
     dest: "/home/{{ buildbot_username }}/info/admin"
