--- a/ansible/roles/slave/tasks/main.yml
+++ b/ansible/roles/slave/tasks/main.yml
@@ -1,13 +1,17 @@
 ---
-- include: slave_Debian.yml tags=slave,buildbot,debian
+- include: slave_Debian.yml
+  tags: [slave,buildbot,debian]
   when: ansible_hostname.lower() in groups['buildslaves'] and ansible_os_family == 'Debian'
 
-- include: slave_FreeBSD.yml tags=slave,buildbot,freebsd
+- include: slave_FreeBSD.yml
+  tags: [slave,buildbot,freebsd]
   when: ansible_hostname.lower() in groups['buildslaves'] and ansible_os_family == 'FreeBSD'
 
-- include: slave_Darwin.yml tags=slave,buildbot,darwin
+- include: slave_Darwin.yml
+  tags: [slave,buildbot,darwin]
   when: ansible_hostname.lower() in groups['buildslaves'] and ansible_os_family == 'Darwin'
 
-- include: slave_Windows.yml tags=slave,buildbot,windows
+- include: slave_Windows.yml
+  tags: [slave,buildbot,windows]
   when: ansible_hostname.lower() in groups['buildslaves'] and ansible_os_family == 'Windows'
 
