--- a/ansible/roles/slave/tasks/slave_Debian.yml
+++ b/ansible/roles/slave/tasks/slave_Debian.yml
@@ -83,13 +83,15 @@
 ##
 ## FIFOCI
 ##
-- include: fifoci.yml tags=slave,buildbot,fifoci
+- include: fifoci.yml
+  tags: [slave,buildbot,fifoci]
   when: ansible_hostname in groups['fifoci']
 
 ##
 ## DPKG
 ##
-- include: dpkg.yml tags=slave,dpkg
+- include: dpkg.yml
+  tags: [slave,dpkg]
   when: ansible_hostname in groups['dpkg']
 
 ##
