--- a/ansible/roles/slave/tasks/w_7zip.yml
+++ b/ansible/roles/slave/tasks/w_7zip.yml
@@ -1,10 +1,14 @@
 ---
-- include: windows_cache_download.yml
-
 - name: 7zip | Installed?
   win_stat:
     path: "C:\\Program Files\\7-Zip"
   register: app
+
+- name: Download file
+  win_get_url:
+    url: "file://{{ cache_location }}\\{{ file }}"
+    dest: "{{ download_location }}\\{{ file }}"
+  when: not app.stat.exists
 
 - name: 7zip | Install
   win_msi:
@@ -12,7 +16,13 @@
     state: present
   when: not app.stat.exists
 
-- name: 7zip | Add to path
-  raw: "powershell [Environment]::SetEnvironmentVariable('Path', $env:Path + ';C:\\Program Files\\7-Zip', [EnvironmentVariableTarget]::Machine)"
-  when: not app.stat.exists
+- name: 7zip | Delete local file
+  win_file:
+    path: "{{ download_location }}\\{{ file }}"
+    state: absent
+
+- include: win_path.yml
+  vars:
+    path: 'C:\Program Files\7-Zip'
+    level: machine
 
