--- a/ansible/roles/slave/tasks/w_pywin32.yml
+++ b/ansible/roles/slave/tasks/w_pywin32.yml
@@ -1,12 +1,21 @@
 ---
-- include: windows_cache_download.yml
-
 - name: pywin32 | Installed?
   win_stat:
     path: "C:\\python27\\scripts\\pywin32_postinstall.py"
   register: app
 
-- name: pywin32 | Install
-  raw: "easy_install {{ download_location }}\\{{ file }}"
+- name: Download file
+  win_get_url:
+    url: "file://{{ cache_location }}\\{{ file }}"
+    dest: "{{ download_location }}\\{{ file }}"
   when: not app.stat.exists
+
+- name: pywin32 | Install
+  raw: "c:\\python27\\scripts\\easy_install {{ download_location }}\\{{ file }}"
+  when: not app.stat.exists
+
+- name: pywin32 | Delete local file
+  win_file:
+    path: "{{ download_location }}\\{{ file }}"
+    state: absent
 
