--- a/ansible/roles/common/tasks/common_Windows.yml
+++ b/ansible/roles/common/tasks/common_Windows.yml
@@ -1,25 +1,48 @@
 ---
+- name: Wait for WinRM
+  local_action: wait_for port="{{ ansible_ssh_port }}" host="{{ inventory_hostname }}"
+
 ##
 ## Remove applications
 ##
-- name: Install uninstallation utility
-  raw: "copy c:\\vagrant\\ansible\\roles\\common\\files\\uninstall_apps.ps1 c:\\tmp"
+- name: Checking common setup
+  win_stat:
+    path: .common
+  register: common
+
+- name: Install removal utilitiies
+  win_copy:
+    src: "files/{{ item }}"
+    dest: "c:/tmp/{{ item }}"
+  with_items:
+    - BlockWindows.bat
+    - HideWindowsUpdates.vbs
+    - uninstall_apps.ps1
+  when: not common.stat.exists
+
+- name: Execute telemetry removal
+  raw: "c:\\tmp\\BlockWindows.bat"
+  when: not common.stat.exists
 
 - name: Uninstall Windows Modern Apps
   raw: "powershell c:\\tmp\\uninstall_apps.ps1"
+  when: not common.stat.exists
 
-# turn off windows store tile
-- name: Create PushNotification registry entry
-  raw: "powershell New-Item -path Registry::HKEY_CURRENT_USER\\Software\\Policies\\Microsoft\\Windows\\CurrentVersion\\PushNotifications"
-  ignore_errors: yes
+- name: Remove removal utilities
+  win_file:
+    path: "c:/tmp/{{ item }}"
+    state: absent
+  with_items:
+    - BlockWindows.bat
+    - HideWindowsUpdates.vbs
+    - uninstall_apps.ps1
+  when: not common.stat.exists
 
-- name: Set tile PushNotification disabled
-  raw: "powershell New-ItemProperty -path Registry::HKEY_CURRENT_USER\\Software\\Policies\\Microsoft\\Windows\\CurrentVersion\\PushNotifications -Name NoTileApplicationNotification -PropertyType DWord -Value 0"
-  ignore_errors: yes
-
-- name: Delete metro app caches
-  raw: "rm -rf c:\\users\\{{ ansible_ssh_user }}\\appdata\\local\\packages"
-  ignore_errors: yes
+- name: Removal complete
+  win_file:
+    name: .common
+    state: touch
+  when: not common.stat.exists
 
 ##
 ## Stop services
