--- a/ansible/roles/www/tasks/nginx.yml
+++ b/ansible/roles/www/tasks/nginx.yml
@@ -25,16 +25,14 @@
     state: link
 
 - name: nginx | Create nginx services area
-  command: mkdir /etc/nginx/services
-  args:
-    creates: /etc/nginx/services
+  file:
+    path: /etc/nginx/services
+    state: directory
 
 - name: nginx | Create nginx SSL area
   file:
     path: /etc/nginx/ssl
-    mode: 0755
     state: directory
-    recurse: yes
 
 - name: nginx | Create Self-Signed SSL certificate
   command: "openssl req -newkey rsa:2048 -new -nodes -x509 -days 3650 -keyout {{ ansible_hostname }}.key -out {{ ansible_hostname }}.pem -subj '/CN=*.dev'"
