--- a/ansible/roles/slave/tasks/w_git.yml
+++ b/ansible/roles/slave/tasks/w_git.yml
@@ -13,11 +13,19 @@
 - name: git | Install
   raw: "{{ download_location }}\\{{ file }} /SILENT"
   when: not app.stat.exists
+# - name: git | Install
+#   win_package:
+#     name: git
+#     path: "{{ download_location }}\\{{ file }}"
+#     product_id: ???
+#     arguments: "/SILENT"
+#   when: not app.stat.exists
 
 - name: git | Delete local file
   win_file:
     path: "{{ download_location }}\\{{ file }}"
     state: absent
+  when: not app.stat.exists
 
 - include: win_path.yml
   vars:
