--- a/ansible/roles/slave/tasks/w_visualstudio.yml
+++ b/ansible/roles/slave/tasks/w_visualstudio.yml
@@ -30,6 +30,14 @@
   raw: "d:\\vs_community.exe /silent /norestart /norefresh /adminfile c:\\tmp\\AdminDeployment.xml /l c:\\tmp\\vslog.txt"
   when: not app.stat.exists
 
+# - name: visual studio | Install
+#   win_package:
+#     name: Visual Studio
+#     path: "d:\\vs_community.exe"
+#     product_id: ???
+#     arguments: "/silent /norestart /norefresh /adminfile c:\\tmp\\AdminDeployment.xml /l c:\\tmp\\vslog.txt"
+#   when: not app.stat.exists
+
 - name: visual studio | Need to dismount?
   win_stat:
     path: "d:\\vs_community.exe"
@@ -43,6 +51,7 @@
   win_file:
     path: "{{ download_location }}\\{{ file }}"
     state: absent
+  when: not app.stat.exists or mount.stat.exists
 
 # build master calls msbuild.  It does not use nmake.
 - include: win_path.yml
